test/data/valid-messages/standard-acquire-service.message
# Standard org.freedesktop.DBus.AcquireService message

VALID_HEADER method_call
FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.DBus'
FIELD_NAME mebr
TYPE STRING
STRING 'AcquireService'
FIELD_NAME srvc
TYPE STRING
STRING 'org.freedesktop.DBus'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
TYPE STRING
STRING 'org.freedesktop.DBus.Sample'
TYPE UINT32
UINT32 0
END_LENGTH Body
