test/data/invalid-messages/bad-endian.message
## message with invalid endianness tag

BYTE 'i'
BYTE 1
BYTE 0
BYTE 0

LENGTH Header
LENGTH Body

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

ALIGN 8

END_LENGTH Header

START_LENGTH Body
END_LENGTH Body
